--- a/Micv/Styles/style.css
+++ b/Micv/Styles/style.css
@@ -34,7 +34,7 @@ p{
 }
 
 ul{
-    color: red;
+    color: white;
 }
 .Sections{
     padding-top: 60px;
@@ -54,4 +54,19 @@ h3{
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+.iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio (height/width) */
+    overflow: hidden;
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
